--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,12 +3,12 @@
     <button mat-icon-button (click)="drawer.toggle()"><mat-icon>menu</mat-icon></button>
   </div>
   <span>
-    <img class="logo" src="assets/icons/tp-icon.png" alt="logo"/>
+    <img class="logo" src="assets/icons/tree-logo.png" alt="logo"/>
   </span>
   <span>
-    <span class="title-cap">T</span><span class="title-sm">RANSFER  </span>
-    <span class="title-cap">P</span><span class="title-sm">RICING </span>
-    <span class="title-cap">.I</span><span class="title-sm">N</span>
+    <span class="title-cap pointer" [routerLink]="'/'">DASRA</span>
+    <span class="title-mobile fs-6 d-inline d-md-none">Handmade Soaps and Classical Oils</span>
+    <span class="title-sm mx-2 d-none d-md-inline">Handmade Soaps and Classical Oils</span>
   </span>
   <span class="example-spacer"></span>
   <div class="d-none d-md-block">
