--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -4,6 +4,10 @@
   color:black;
 }
 
+.pointer{
+  cursor:pointer;
+}
+
 .logo{
   height: 50px;
   margin-right: 15px;
@@ -17,6 +21,12 @@
 .title-sm{
   font-size: 25px;
   color: teal;
+}
+
+.title-mobile{
+  position: absolute;
+  top: 50px;
+  left: 106px;
 }
 
 .example-spacer {
