--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -31,7 +31,7 @@
 <mat-drawer-container class="example-container" [hasBackdrop]="true" [style.height.px]="contentScreenHeight">
   <mat-drawer #drawer mode="over">
     <div style="margin:0 10px">
-      <div *ngFor="let m of menu">
+      <div *ngFor="let m of menu" class="m-2">
         <button  *ngIf="m.align=='bottom'" mat-button [routerLink]="m.link" routerLinkActive="{{m.class}}" class="menu-left">{{m.name}}</button>
       </div>
     </div>
