--- a/src/app/home/about-us/about-us.component.html
+++ b/src/app/home/about-us/about-us.component.html
@@ -2,76 +2,42 @@
     <div class="mt-1">
         <h2>About Us</h2>
     </div>
-    <div>
-        <h3>WHAT WE DO</h3>
+    <div class="fs-6">
         <p>
-            We Specialize in international tax and transfer pricing for companies with an international footprint.
+            DASRA Soaps is MSME registered company to manufacture hand made soaps and classical oils.
         </p>
         <p>
-            We primarily focus on helping companies in the $1M USD - $100M USD revenue range legally saving millions of dollars in tax.
+            Here we produce natural hand made soaps and sell out to our customers across states using online platform.
         </p>
         <p>
-            We ensure full compliance with local regulators and tax authorities. The end goal is to ensure more cash is returned to shareholders.
+            Our aim is to provide high quality soaps that are natural and not harmful to environment.
         </p>
+        
     </div>
     <div>
-        <h3>HOW WE DO IT</h3>
-        <p>
-            T = Total analysis of your current situation<br/>
-            R = Report on potential avenues for cross border tax savings<br/>
-            A = Assess the tax savings<br/>
-            N = Negate regulatory and audit risks<br/>
-            S = Strategies to ensure minimal tax exposure<br/>
-            F = Full implementation support<br/>
-            E = Effective compliance controls<br/>
-            R = Realize the cash savings<br/>
-        </p>
-    </div>
-    <div>
-        <p>
-            We have over 6 years experience in transfer pricing and international tax where we 
-            helped to lead the largest MNCs transfer pricing practice in India.
-        </p>
-        <p>
-            Our experience also includes being the engagement lead for transfer pricing on a 
-            number of India's largest companies, with particular emphasis on Pharma, technology, Marine, Consumer &amp; 
-            Industrial products and Automotive.
-        </p>
-        <p>
-            We have considerable experience in transfer pricing matters, including establishing 
-            transfer pricing framework and policies, negotiating APAs and making successful 
-            competent authority applications.
-        </p>
-        <p>
-            A particular focus where we have spent considerable time in recent years has been 
-            transfer pricing controversy matters, where we have worked on some large transfer 
-            pricing disputes.
-        </p>
-    </div>
-    <div>
-        <h3>WHAT WE OFFER TO BEGIN WITH</h3>
-        <ul>
-            <li>Assessing your current situation.</li>
-            <li>Identifying key challenges.</li>
-            <li>Determining a high level approach to a customized transfer pricing strategy.</li>
-            <li>Creating a tailored action plan for you and helping to execute on it from A to Z.</li>
-        </ul>
-        <div class="contact-block">
-            <b>Phone:</b> + 91 9441446087<br/>
-            <b>Email:</b> chaitanya@bcktax.com<br/>
-            <b>Website</b>www.transferpricing.in
+        <h2>Contact Details</h2>
+        <div class="row mt-1">
+            <div class="col-md-6">
+                <div class="entry">
+                    <h3>Vempati Sasi Kumar </h3>
+                    <p>
+                        <strong>Phone:</strong>&nbsp;+91 9573532034<br>
+                        <strong>Email</strong>: <a href="mailto:sasikumarvempati@gmail.com">sasikumarvempati@gmail.com</a><br>
+                    </p>
+                    <p><strong>Address:</strong><br/>
+                    D-NO: 1-179/12, YS Reddy Function Hall Road<br/> 
+                        PNT Colony, Paipula Road,<br/> 
+                        Vijayawada - 520012
+                    </p>
+    
+            
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div id="s8-thirdpartygooglemap1" style="position: relative;width: 100%; height: 408px;">    
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1025.2288434517923!2d80.63792036593054!3d16.550574326244003!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a35e57bd3bb919d%3A0x2f6dd4af8f3f0e27!2sV.%20V.%20S.%20K!5e0!3m2!1sen!2sin!4v1683663230890!5m2!1sen!2sin" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="mt-1">
-        <h3><span class="material-icons align-top mx-1">star</span>PLEASE <span class="link" routerLink="/contact-us">CONTACT US</span> WHEN YOU ARE READY:</h3>
-        <ol>
-            <li>To assess your current situation and measure where are you standing</li>
-            <li>To get a tailored plan of action created for you</li>
-            <li>To become educated on the millions of dollars that can be saved through
-                implementation of a successful transfer pricing strategy</li>
-        </ol>
-
-    </div>
-
-
 </div>
