--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,21 @@
 <div class="container">
-  <app-benefits></app-benefits>
+  <div class="carousel slide mt-3" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../../assets/images/banner1.PNG" class="d-block w-100" alt="...">
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <h2>Soap Ingredients</h2>
+    <p class="details fs-4">Olive oil, Almond oil, Coconut oil, Sodium Hydroxide, Ayurvedic Herbals and Fragrance perfume</p>
+  </div>
+  <div class="row">
+    <h2>Ayurvedic Herbals</h2>
+    <p class="details fs-4"> Saffron, Rose, Tulsi, Neem, Sandal, Atimaduram, Bilva, Darharidra, Goksoora, Manjista, Vetiver</p>
+  </div>
+  <div class="row">
+    <h2>Benefits</h2>
+    <p class="details fs-4">Excellent skin glowing, brightnes, acne, pigmentation, anti tanning, skin rashes, free radical damages from sun rays, removes dark circles </p>
+  </div>
 </div>
