--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -42,6 +42,10 @@ h1, .h1, h2, .h2, h3, .h3 {
     font-weight: bold;
 }
 
+.details{
+    line-height: 1.5;;
+}
+
 
 @media only screen and (max-width: 500px) {
 
